# SensorClock

./: README.md
enclosure/: enclosure.scad  enclosure.stl  face-back.dxf  face-bottom.dxf  face-left.dxf  face-right.dxf  readme.txt
firmware/: CMakeLists.txt  frogfs.yaml  sdkconfig  (+1 more)
firmware/main/: CMakeLists.txt  idf_component.yml  lv_font_montserrat_latin1x_12.c  lv_font_montserrat_latin1x_14.c  lv_font_montserrat_semibold_latin1x_12.c  lv_font_montserrat_semibold_latin1x_14.c  main.cpp
firmware/main/certs/: README.txt
firmware/main/gui/: Common.h  Dashboard.h  GuiConfig.h  GuiInit.cpp  GuiInit.h  MainScreen.h  Settings.h
firmware/main/lvclasses/: LvArea.h  LvBar.h  LvButton.h  LvButtonMatrix.h  LvCheckbox.h  LvDropdown.h  LvEvent.h  LvImage.h  LvKeyboard.h  LvLabel.h  LvLine.h  LvList.h  LvMenu.h  LvMsgbox.h  LvObj.h  LvScale.h  LvScreen.h  LvSlider.h  LvSwitch.h  LvTabView.h  LvTextArea.h  LvTinyTtf.h  LvWin.h
firmware/main/modules/: AlarmSounder.cpp  AlarmSounder.h  AppController.cpp  AppController.h  BoardFs.config.h  BoardFs.cpp  BoardFs.h  DataLogger.cpp  DataLogger.h  DataLogger.test.h  Dispatcher.cpp  Dispatcher.h  HistoryServer.cpp  HistoryServer.h  HttpServerCore.config.h  HttpServerCore_esp32.h  HttpServerCore_proto.h  NetIf.cpp  NetIf.h  PropertiesStore.cpp  PropertiesStore.h  SensorTask.cpp  SensorTask.h  WeatherTask.config.h  WeatherTask.cpp  WeatherTask.h  WebRequest.cpp  WebRequest.h  bme6801IAQ_esp32.h
firmware/main/utilities/: cjsonwrap.h  heapbuffer.h  listenerlist.h  platform.cpp  platform.h  strutil.h  xheap.cpp  xheap.h
(+12 files in other folders)
